[gd_scene load_steps=2 format=3 uid="uid://dw6w5dawetjtv"]

[ext_resource type="Script" uid="uid://chioyl3lx1juc" path="res://settings_menu.gd" id="1_ufg0w"]

[node name="SettingsMenu" type="Node"]
script = ExtResource("1_ufg0w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(139, 72)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Setting_1" type="HBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_1"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "window mode"

[node name="WindowMode" type="OptionButton" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Setting_2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_2"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "resolution"

[node name="Resolution" type="OptionButton" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Setting_3" type="HBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_3"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "SFX volume"

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SFXText" type="LineEdit" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/minimum_character_width = 2
text = "100"
placeholder_text = " -"
max_length = 3
emoji_menu_enabled = false
virtual_keyboard_type = 2

[node name="Setting_4" type="HBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_4"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "music volume"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MusicText" type="LineEdit" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/minimum_character_width = 2
text = "100"
placeholder_text = " -"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="item_selected" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_1/WindowMode" to="." method="_on_window_mode_selected"]
[connection signal="item_selected" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_2/Resolution" to="." method="_on_resolution_selected"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_3/SFXSlider" to="." method="_on_SFX_volume_changed"]
[connection signal="text_submitted" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_3/SFXText" to="." method="_on_SFX_text_submitted"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_4/MusicSlider" to="." method="_on_music_volume_changed"]
[connection signal="text_submitted" from="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer/Setting_4/MusicText" to="." method="_on_music_text_submitted"]
